--- a/index.html
+++ b/index.html
@@ -5,34 +5,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reformas Juan Leiva</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1>Reformas Juan Leiva</h1>
+    <div class="logo">Reformas Juan Leiva</div>
     <nav>
       <a href="index.html">Inicio</a>
+      <a href="#services">Servicios</a>
+      <a href="#about">Sobre mí</a>
       <a href="contact.html">Contacto</a>
     </nav>
   </header>
 
-  <main>
-    <section class="hero">
-      <h2>Transformamos tu hogar</h2>
-      <p>Ofrecemos servicios de reformas integrales, mantenimiento y diseño para tu vivienda o negocio.</p>
-    </section>
+  <section class="hero">
+    <h1>Transformamos tu hogar</h1>
+    <p>Reformas integrales, mantenimiento y diseño para tu vivienda o negocio.</p>
+    <img src="https://via.placeholder.com/800x300.png?text=Reformas" alt="Imagen de reformas">
+  </section>
 
-    <section class="services">
-      <h3>Servicios</h3>
-      <div class="service-item">Reformas de interiores</div>
-      <div class="service-item">Instalaciones eléctricas</div>
-      <div class="service-item">Montaje de estructuras</div>
-    </section>
+  <section id="services">
+    <h2>Servicios</h2>
+    <div class="services-container">
+      <div class="service-item">
+        <img src="https://via.placeholder.com/100" alt="Reformas interiores">
+        <h3>Reformas de interiores</h3>
+        <p>Renovación de cocinas, baños y salones con acabados modernos y funcionales.</p>
+      </div>
+      <div class="service-item">
+        <img src="https://via.placeholder.com/100" alt="Instalaciones eléctricas">
+        <h3>Instalaciones eléctricas</h3>
+        <p>Montaje de sistemas eléctricos, iluminación y cableado estructurado.</p>
+      </div>
+      <div class="service-item">
+        <img src="https://via.placeholder.com/100" alt="Montaje estructuras">
+        <h3>Montaje de estructuras</h3>
+        <p>Montaje de estructuras metálicas y trabajos con CNC y AutoCAD.</p>
+      </div>
+    </div>
+  </section>
 
-    <section class="about">
-      <h3>Sobre mí</h3>
-      <p>Soy Juan Leiva, desarrollador web junior y técnico con experiencia en electricidad, automatización y CNC. Combino conocimientos técnicos con pasión por crear soluciones web y proyectos prácticos.</p>
-    </section>
-  </main>
+  <section id="about">
+    <h2>Sobre mí</h2>
+    <div class="about-container">
+      <img src="https://via.placeholder.com/150" alt="Foto Juan Leiva">
+      <p>Soy Juan Leiva, desarrollador web junior y técnico con experiencia en electricidad, automatización y CNC. Combino mis conocimientos técnicos con la pasión por crear soluciones web y proyectos prácticos.</p>
+    </div>
+  </section>
 
   <footer>
     <p>&copy; 2025 Juan Leiva | <a href="contact.html">Contacto</a></p>
