--- a/contact.html
+++ b/contact.html
@@ -8,30 +8,35 @@
 </head>
 <body>
   <header>
-    <h1>Reformas Juan Leiva</h1>
+    <div class="logo">Reformas Juan Leiva</div>
     <nav>
       <a href="index.html">Inicio</a>
+      <a href="index.html#services">Servicios</a>
+      <a href="index.html#about">Sobre mí</a>
       <a href="contact.html">Contacto</a>
     </nav>
   </header>
 
-  <main>
-    <section class="contact-form">
-      <h2>Contáctame</h2>
-      <form>
-        <label for="name">Nombre</label>
-        <input type="text" id="name" name="name" placeholder="Tu nombre">
+  <section class="contact-form">
+    <h2>Contáctame</h2>
+    <form>
+      <label for="name">Nombre</label>
+      <input type="text" id="name" name="name" placeholder="Tu nombre">
 
-        <label for="email">Correo electrónico</label>
-        <input type="email" id="email" name="email" placeholder="Tu email">
+      <label for="email">Correo electrónico</label>
+      <input type="email" id="email" name="email" placeholder="Tu email">
 
-        <label for="message">Mensaje</label>
-        <textarea id="message" name="message" placeholder="Escribe tu mensaje"></textarea>
+      <label for="message">Mensaje</label>
+      <textarea id="message" name="message" placeholder="Escribe tu mensaje"></textarea>
 
-        <button type="submit">Enviar</button>
-      </form>
-    </section>
-  </main>
+      <button type="submit">Enviar</button>
+    </form>
+
+    <div class="contact-info">
+      <p>Email: juanleiva010@outlook.es</p>
+      <p>Teléfono: 606 899 991</p>
+    </div>
+  </section>
 
   <footer>
     <p>&copy; 2025 Juan Leiva | <a href="index.html">Inicio</a></p>
