--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
   <section class="hero">
     <h1>Transformamos tu hogar</h1>
     <p>Reformas integrales, mantenimiento y diseño para tu vivienda o negocio.</p>
-    <img src="https://via.placeholder.com/800x300.png?text=Reformas" alt="Imagen de reformas">
+    <img src="https://images.unsplash.com/photo-1570129477492-45c003edd2be?auto=format&fit=crop&w=800&q=80" alt="Imagen de reformas">
   </section>
 
   <section id="services">
     <h2>Servicios</h2>
     <div class="services-container">
       <div class="service-item">
-        <img src="https://via.placeholder.com/100" alt="Reformas interiores">
+        <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=100&q=80" alt="Reformas interiores">
         <h3>Reformas de interiores</h3>
         <p>Renovación de cocinas, baños y salones con acabados modernos y funcionales.</p>
       </div>
       <div class="service-item">
-        <img src="https://via.placeholder.com/100" alt="Instalaciones eléctricas">
+        <img src="https://images.unsplash.com/photo-1581091215367-7bfcf62cc0d1?auto=format&fit=crop&w=100&q=80" alt="Instalaciones eléctricas">
         <h3>Instalaciones eléctricas</h3>
         <p>Montaje de sistemas eléctricos, iluminación y cableado estructurado.</p>
       </div>
       <div class="service-item">
-        <img src="https://via.placeholder.com/100" alt="Montaje estructuras">
+        <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=100&q=80" alt="Montaje estructuras">
         <h3>Montaje de estructuras</h3>
         <p>Montaje de estructuras metálicas y trabajos con CNC y AutoCAD.</p>
       </div>
@@ -50,7 +50,7 @@
   <section id="about">
     <h2>Sobre mí</h2>
     <div class="about-container">
-      <img src="https://via.placeholder.com/150" alt="Foto Juan Leiva">
+      <img src="https://images.unsplash.com/photo-1607746882042-944635dfe10e?auto=format&fit=crop&w=150&q=80" alt="Foto Juan Leiva">
       <p>Soy Juan Leiva, desarrollador web junior y técnico con experiencia en electricidad, automatización y CNC. Combino mis conocimientos técnicos con la pasión por crear soluciones web y proyectos prácticos.</p>
     </div>
   </section>
